correct image path

--- a/_posts/2019-11-02-德国-波兰-捷克-匈牙利-奥地利， 两次相隔很近的旅程.md
+++ b/_posts/2019-11-02-德国-波兰-捷克-匈牙利-奥地利， 两次相隔很近的旅程.md
@@ -46,11 +46,11 @@ date: 2019-11-02
 
 人终归还是群居动物，独行带来的快乐不会太长久，独自吃饭，独自排队的尴尬感我至今没能很好的摆脱。但这就是弱者的弱点啊。不由想到利物浦的队歌《你永远不会独行》，突然觉得有点好笑了，这不就是懦弱者们抱团取暖的颂歌吗？在必要的时候独行，克服独处的不适，依然是我追求的目标，我也依然不喜欢利物浦俱乐部。「我们生来就是孤独」，又是李志。我好想念李志，他曾经是我独行时的好伙伴。
 
-![树梢间的修道院顶](../assets/images/树梢间的修道院顶.jpg)
+![树梢间的修道院顶]({{site.baseurl}}/assets/images/树梢间的修道院顶.jpg){:width="500px"}
 
-![修道院后方看到的城堡](../assets/images/修道院后方看到的城堡.jpg)
+![修道院后方看到的城堡]({{site.baseurl}}/assets/images/修道院后方看到的城堡.jpg){:width="500px"}
 
-![迷你铁塔下的美味午餐](../assets/images/迷你铁塔下的美味午餐.jpg)
+![迷你铁塔下的美味午餐]({{site.baseurl}}/assets/images/迷你铁塔下的美味午餐.jpg){:width="500px"}
 
 # 柏林
 
