feat: Introduce a tag system for posts with a dedicated page and navigation

--- a/_posts/2020-01-07-update.md
+++ b/_posts/2020-01-07-update.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Update"
 date: 2020-01-07
+tags: [family, life]
 ---
 
 进入新的十年了，十年以前我会踌躇满志地在日记本上写个年终总结甚至十年总结之类的，但我现在没时间，有些东西又怕忘了。这篇是流水账。
